--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 OPENAI_API_KEY=tokendajfhakfjadkakfjar37ryd8heqq91
 APP_MODE_=development
-PROXYCURL_API_KEY=XXX
+PROXYCURL_API_KEY=XXX8327hsrn28xxw3jx8hjx9
+TAVILY_API_KEY=tvly-XXX8327hsrn28xxw3jx8hjx9
+MOCK=true
