--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ langchain = "*"
 black = "*"
 python-dotenv = "*"
 langchain-openai = "*"
+langchain-community = "*"
+langchainhub = "*"
 
 [dev-packages]
 
